change user model
